--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
     }
   ],
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#666",
   "background_color": "#666"
 }
