--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gh-pages": "^2.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "firebase": "4.8.0"
   },
   "scripts": {
     "predeploy": "yarn run build",
